--- a/src/components/ServicesHero/ServicesHero.css
+++ b/src/components/ServicesHero/ServicesHero.css
@@ -18,6 +18,7 @@
 }
 
 .service-hero h1 {
+  font-family: "Playfair Display", serif;
   font-size: 3.5rem;
   line-height: 1.1;
   margin-bottom: 30px;
